[package]
name = "runb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.29.0"
markdown = "1.0.0"
nanoid = "0.4.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
serde_yml = "0.0.12"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
uuid = "1.18.1"
validator = { version = "0.20.0", features = ["derive"] }
